# BADASS

./: LICENSE  README.md  packages.yaml  pyproject.toml  requirements.txt
badass/: __init__.py
badass/mld/: general_optimizer.py  protein_optimizer.py  seq2fitness_protein_optimizer.py  sequence_sampler.py
badass/models/: seq2fitness_models.py
badass/training/: seq2fitness_train.py  seq2fitness_traintools.py
data/: NucB_esm2_3B_scores.xlsx  NucB_processed.csv  alpha_amylase_esm2_3b_scores.xlsx
notebooks/: Compute ESM2-3B Scores.ipynb  Run BADASS for NucB-GGS.ipynb  Run_BADASS_Alpha_Amylase.ipynb  Run_BADASS_Alpha_Amylase_new_class.ipynb  Train NucB GGS-Seq2Fitness Model.ipynb  Train NucB Seq2Fitness Model.ipynb  Train_Seq2Fitness_Models.ipynb  setup_environment.py  single_mutant_scores_amylase.pkl  single_mutant_scores_amylase_esm_only.pkl  test_arbitrary_function_optimizer.ipynb
notebooks/NucB/: Train NucB GGS-Seq2Fitness Model.ipynb  Train NucB Seq2Fitness Model.ipynb
notebooks/others/: Train NucB Seq2Fitness Model.ipynb
src/data/: datasets.py
src/mld/: seq2fitness_protein_optimizer.py  sequence_sampler.py
src/models/: seq2fitness_models.py
src/training/: seq2fitness_train.py  seq2fitness_traintools.py
src/utils/: sequence_utils.py
trained_models/: Seq2Fitness_AAmylsase_DEMLPaper_AugmentedDataset__final_model_epoch_80_val_loss_0.8209.pt  Seq2Fitness_AAmylsase_DEMLPaper__modelrank_1_epoch_45_val_loss_0.5990.pt  nucb_GGS_model_final_model_epoch_43_val_loss_0.8608.pt  nucb_model_final_model_epoch_100_val_loss_0.5445.pt
